add explicit semicolon

--- a/templates/generated.nft.j2
+++ b/templates/generated.nft.j2
@@ -3,5 +3,5 @@
 {{ ansible_managed | comment }}
 
 {% for rule in nftables_rules|default([]) %}
-include "{{ nftables_dir }}/generated.d/{{ rule }}.nft"
+include "{{ nftables_dir }}/generated.d/{{ rule }}.nft";
 {% endfor %}
