add explicit semicolon

--- a/templates/nftables.conf.j2
+++ b/templates/nftables.conf.j2
@@ -3,8 +3,8 @@
 {{ ansible_managed | comment }}
 
 {% if nftables_flush_ruleset|default(true) %}
-flush ruleset
+flush ruleset;
 {% endif %}
 
-include "{{ nftables_dir }}/generated.nft"
-include "{{ nftables_dir }}/custom.nft"
+include "{{ nftables_dir }}/generated.nft";
+include "{{ nftables_dir }}/custom.nft";
